fix: cover text dash wrap

--- a/blocks/subtitle/_subtitle.scss
+++ b/blocks/subtitle/_subtitle.scss
@@ -49,4 +49,7 @@
       line-height: 16px;
     }
   }
+  &__span {
+    white-space: nowrap;
+  }
 }
