--- a/pages/index.css
+++ b/pages/index.css
@@ -368,6 +368,9 @@
     line-height: 16px;
   }
 }
+.subtitle__span {
+  white-space: nowrap;
+}
 
 .intro {
   margin: 0 auto;
